[package]
name = "somefiles"
version = "0.1.0"
authors = ["e1810 <v.iceele1810@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
askama = "0.10.5"
thiserror = "1.0.23"
serde = "1.0.118"
anyhow = "1.0.37"
once_cell = "1.5.2"
